tests/parse_print/random_perturb/set01/delete-08/stderr.expected
Conjure is exiting due to user errors.
Error:
    tests/parse_print/random_perturb/set01/delete-08/delete-08.essence line 3, column 21:
unexpected o
expecting of
    line 3, column 21
    find x : set (size 2) o int(1..3)
                     ^^^^^^^